<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context="br.com.mobile2you.m2ybase.ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:background="@drawable/bg_stroke_rounded_white"
                app:layout_constraintBottom_toTopOf="@+id/loginForgotPassBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <br.com.mobile2you.m2ybase.ui.widget.AppTextInputLayout
                    android:id="@+id/loginEmailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_hint"
                    android:padding="8dp"
                    android:textColorHint="@color/color_gray_light"
                    app:emptinessIsValid="true"
                    app:inputTextType="name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_transparent"
                        android:inputType="textEmailAddress"
                        android:paddingTop="4dp"
                        android:textColor="@color/color_white" />

                </br.com.mobile2you.m2ybase.ui.widget.AppTextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_white" />

                <br.com.mobile2you.m2ybase.ui.widget.AppTextInputLayout
                    android:id="@+id/loginPassEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_transparent"
                    android:hint="@string/login_password_hint"
                    android:padding="8dp"
                    android:textColorHint="@color/color_gray_light"
                    app:emptinessIsValid="true"
                    app:inputTextType="password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_transparent"
                        android:inputType="textPassword"
                        android:paddingTop="4dp"
                        android:textColor="@color/color_white" />

                </br.com.mobile2you.m2ybase.ui.widget.AppTextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/loginForgotPassBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/login_forgot_pass"
                android:textColor="@color/color_white"
                app:layout_constraintBottom_toTopOf="@+id/loginSigninBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <br.com.mobile2you.m2ybase.ui.widget.ProgressButton
                android:id="@+id/loginSigninBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:btnBackground="@drawable/bg_rounded_corners_accent"
                app:btnText="@string/login_signin"
                app:layout_constraintBottom_toTopOf="@+id/loginRegisterBtn"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                app:layout_constraintStart_toStartOf="@+id/linearLayout3" />

            <TextView
                android:id="@+id/loginRegisterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:text="@string/login_create_account"
                android:textColor="@color/color_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>